# har-to-tflite

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  readline.py
.github/workflows/: ci.yml
configs/: default.yaml  smoke.yaml
docs/: ARCHITECTURE.md
scripts/: run_all_full.sh  run_all_smoke.sh
scripts/android/: README_android_bench.md  build_or_get_benchmark_model.md
src/h2t/: __init__.py  __main__.py  cli.py  config.py  constants.py  logging_utils.py
src/h2t/bench/: __init__.py  android.py  host.py  parse_benchmark_output.py
src/h2t/data/: __init__.py  registry.py  synthetic.py  uci_har.py
src/h2t/export/: __init__.py  representative_data.py  tflite_export.py
src/h2t/models/: __init__.py  registry.py  teacher_cnn.py  tiny_cnn.py
src/h2t/reporting/: __init__.py  leaderboard.py  report.py
src/h2t/training/: __init__.py  metrics.py  train.py
src/h2t/utils/: __init__.py  jsonio.py  reproducibility.py  subprocess_utils.py
tests/: test_android_benchmark_parser.py  test_config_loading.py  test_export_manifest.py  test_reporting_summary.py  test_repro_and_android_stubs.py  test_smoke_pipeline.py
tests/stubs/: readline.py
